// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches forest theme snapshot 1`] = `
<View
  accessible={false}
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderBottomColor": "rgba(224, 232, 225, 1)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 0,
      "borderLeftColor": "rgba(224, 232, 225, 1)",
      "borderLeftWidth": 0,
      "borderRightColor": "rgba(224, 232, 225, 1)",
      "borderRightWidth": 0,
      "borderStyle": "solid",
      "borderTopColor": "rgba(224, 232, 225, 1)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 0,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(20,40,26)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#14281A",
      }
    }
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;

exports[`Card matches midnight theme snapshot 1`] = `
<View
  accessible={false}
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(0, 0, 0, 0)",
      "borderBottomColor": "rgba(39, 39, 42, 1)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(39, 39, 42, 1)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(39, 39, 42, 1)",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "rgba(39, 39, 42, 1)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(250,250,250)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#FAFAFA",
      }
    }
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;

exports[`Card matches sunrise theme snapshot 1`] = `
<View
  accessible={false}
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderBottomColor": "rgba(0, 0, 0, 0)",
      "borderBottomLeftRadius": 9,
      "borderBottomRightRadius": 9,
      "borderBottomWidth": 1,
      "borderLeftColor": "rgba(0, 0, 0, 0)",
      "borderLeftWidth": 1,
      "borderRightColor": "rgba(0, 0, 0, 0)",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "rgba(0, 0, 0, 0)",
      "borderTopLeftRadius": 9,
      "borderTopRightRadius": 9,
      "borderTopWidth": 1,
      "cursor": "default",
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
      "shadowColor": "rgb(39,31,21)",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 10,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text
    style={
      {
        "color": "#271F15",
      }
    }
    suppressHighlighting={true}
  >
    Hi
  </Text>
</View>
`;
